unpackaged/main/default/objects/npsp__Gift_Entry_Settings__c/fields/npsp__Default_Gift_Entry_Template__c.field-meta.xml
<CustomField>
    <fullName>npsp__Default_Gift_Entry_Template__c</fullName>
    <description>This is a starter template used for Gift Entry and can be used to enter single gifts or batches of gifts. This is the default template for entering single gifts.</description>
    <inlineHelpText>This is a starter template used for Gift Entry and can be used to enter single gifts or batches of gifts. This is the default template for entering single gifts.</inlineHelpText>
    <label>Default Gift Entry Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>