unpackaged/main/default/objects/npsp__Gift_Entry_Settings__c/fields/npsp__Enable_Gateway_Assignment__c.field-meta.xml
<CustomField>
    <fullName>npsp__Enable_Gateway_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables different Elevate Gateways to be used for Gift Entry Elevate batches.  If not enabled, the default gateway is always used.</description>
    <inlineHelpText>Enables different Elevate Gateways to be used for Gift Entry Elevate batches.  If not enabled, the default gateway is always used.</inlineHelpText>
    <label>Enable Gateway Assignment</label>
    <type>Checkbox</type>
</CustomField>