unpackaged/main/default/objects/npsp__Gift_Entry_Settings__c/fields/npsp__Enable_Gift_Entry__c.field-meta.xml
<CustomField>
    <fullName>npsp__Enable_Gift_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the Gift Entry tool. This feature requires Advanced Mapping.</description>
    <inlineHelpText>Enables the Gift Entry tool. This feature requires Advanced Mapping.</inlineHelpText>
    <label>Enable Gift Entry</label>
    <type>Checkbox</type>
</CustomField>